# HoarderToPod

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: cd.yaml
hoarderpod/: api.py  archive_scraper.py  article_parse.py  config.py  episodes.py  hoarder_service.py  run.py  tts_service.py  utils.py
hoarderpod/templates/: episodes.html  episodes_table.html
tests/: test_archive_scraper.py  test_article_parse.py  test_tts_service.py  test_utils.py
